--- a/mysql_javascript/views/pagamento.handlebars
+++ b/mysql_javascript/views/pagamento.handlebars
@@ -1,1 +1,12 @@
-<h1>Listar Pagamento</h1>
+<h1>Listar Pagamentos do Banco</h1>
+<h2>Listar o que tem no Banco</h2>
+{{#each pagamentos }}
+    ID: {{id}} <br>
+    Nome da conta: {{nome}} <br>
+    Valor: {{valor}}<br>
+    Data de Digitação: {{#formatDate createdAt}}{{/formatDate}}
+    <br>
+    <a href="/del-pagamento/{{id}}"> <button>Apagar</button> </a>
+    <br><hr>
+    <br>
+{{/each}}
